LSNBLDR-686; improve next and back buttons; fix various overlaps in titles (#3029)

--- a/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
+++ b/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
@@ -113,6 +113,19 @@
 .nextprev {
 	font-size: 95% !important
 }
+.Mrphs-siteHierarchy {
+	display:flex
+}
+span.nextprev {
+	flex: none;
+}
+.hierarchyWrap {
+	flex: auto;
+}
+div.action span .nextbutton, .Mrphs-siteHierarchy span .nextbutton{
+        border: solid 1px !important; 
+        padding:2px 5px !important
+}
 .neoPortletTitleWrap {
 	padding-bottom: 4px;
 }
@@ -224,7 +237,7 @@
 .disabled:hover {
 	color: #cccccc
 }
-a.ui-button:link, a.ui-button:visited {
+.portletBody a.ui-button:link, .portletBody a.ui-button:visited {
 	color: black;
 	text-decoration: none !important;
 }
@@ -555,7 +568,7 @@ a.edit-link:link, a.edit-link:visited, a.section-merge-link:link, a.section-merg
 }
 
 .ui-button-text {
-	font-weight: bold;
+	font-weight: bold !important;
 	padding: 0px 4px !important;
 }
 .edit-col .ui-button-text, #submit-grading .ui-button-text, .portalmenu .ui-button-text {
@@ -711,6 +724,12 @@ a.edit-link:link, a.edit-link:visited, a.section-merge-link:link, a.section-merg
 .returnheader a:hover, returnheader  a:active {
 	background-color: #edd !important;
 	color:black !important;
+}
+.showItemNoMorpheus .returnheader {
+    display:block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
 }
 .showItemMorpheus .returnheader a:link, .showItemMorpheus .returnheader a:visited,
 .showItemMorpheus .returnheader a:hover,.showItemMorpheus .returnheader a:active {
@@ -924,7 +943,7 @@ ul#toolbar li em {
     font-size: .85em !important
 }
 .Mrphs-siteHierarchy span.nextprev {
-   float:right
+
 }
 .lessons-siteHierarchy-title {
    font-weight: bold;
@@ -942,7 +961,8 @@ span.nextprev {
   margin-right: 0.5em;
 }
 a.nextprev {
-	margin-left: 5px;
+	margin-left: 5px !important;
+	margin-right: 0px !important;
 }
 img {
 	z-index: 1
@@ -1271,7 +1291,6 @@ div[role="dialog"] {
 }
 div.navIntraTool {
   border-top:none;
-  margin-bottom:
 }
 
 /* temporary, to avoid changing old stuff for the moment */
@@ -1409,7 +1428,10 @@ font-size: 90%;
   line-height:10px;
   margin-bottom:5px;
 }
-/* without this it sticks up 1px into the top bar */
+/* fit the actual height, so it doesn't overlap title */
+.Mrphs-toolTitleNav__button_container {
+  height: 30px;
+}
 .portletBody {
   margin-top:2px;
 }
@@ -1487,6 +1509,9 @@ font-size: 90%;
 }
 .hierFlex2 {
    display:none;
+}
+span.nextprev {
+	flex: auto;
 }
 }
 .lessonsToolButton {
